fix: drop assumption that non-Jackson annotated non-Java data types will always be complex (e.g., a run-time List<Object> can be a list of integers)
re-add dhis-service-dxf2 dependency since some API classes are defined in that module

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <version>${dhis2.api.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.dhis2.dhis2-core</groupId>
+            <artifactId>dhis-service-dxf2</artifactId>
+            <version>${dhis2.api.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.hisp.dhis.parser</groupId>
             <artifactId>dhis-antlr-expression-parser</artifactId>
             <version>1.0.26</version>
