--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,18 @@
         <maven.compiler.target>11</maven.compiler.target>
         <jsonschema-generator.version>4.24.3</jsonschema-generator.version>
         <dhis2.api.version>2.37.6</dhis2.api.version>
-        <output.dir>schemas</output.dir>
+        <schemas.output.dir>schemas</schemas.output.dir>
+        <docs.output.dir>docs</docs.output.dir>
         <gpg.skip>true</gpg.skip>
         <junit.version>5.8.2</junit.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>0.9.10</version>
+        </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
@@ -47,11 +53,6 @@
         <dependency>
             <groupId>com.github.dhis2.dhis2-core</groupId>
             <artifactId>dhis-api</artifactId>
-            <version>${dhis2.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.dhis2.dhis2-core</groupId>
-            <artifactId>dhis-service-dxf2</artifactId>
             <version>${dhis2.api.version}</version>
         </dependency>
         <dependency>
@@ -84,6 +85,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>post-v2.37.5</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.github.dhis2.dhis2-core</groupId>
+                    <artifactId>dhis-service-dxf2</artifactId>
+                    <version>${dhis2.api.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -122,7 +139,8 @@
                 <configuration>
                     <mainClass>org.hisp.dhis.integration.jsonschemagen.Dhis2JsonSchemaGenerator</mainClass>
                     <arguments>
-                        <argument>${output.dir}</argument>
+                        <argument>${schemas.output.dir}</argument>
+                        <argument>${docs.output.dir}</argument>
                     </arguments>
                 </configuration>
             </plugin>
@@ -132,6 +150,9 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
+                    <systemPropertyVariables>
+                        <dhis2.api.version>${dhis2.api.version}</dhis2.api.version>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
