--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  publish:
     name: Publish
     runs-on: ubuntu-latest
     steps:
@@ -27,17 +27,30 @@ jobs:
           mvn package exec:java -Ddhis2.api.version=2.37.6 -Dschemas.output.dir=schemas/v2.37.6 -Ddocs.output.dir=docusaurus/docs/v2.37.6
           mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.37.5 -Dschemas.output.dir=schemas/v2.37.5 -Ddocs.output.dir=docusaurus/docs/v2.37.5
           mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.37.4 -Dschemas.output.dir=schemas/v2.37.4 -Ddocs.output.dir=docusaurus/docs/v2.37.4
+          mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.37.3 -Dschemas.output.dir=schemas/v2.37.3 -Ddocs.output.dir=docusaurus/docs/v2.37.3
+          mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.37.2 -Dschemas.output.dir=schemas/v2.37.2 -Ddocs.output.dir=docusaurus/docs/v2.37.2
+          mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.37.1 -Dschemas.output.dir=schemas/v2.37.1 -Ddocs.output.dir=docusaurus/docs/v2.37.1
+          mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.37.0 -Dschemas.output.dir=schemas/v2.37.0 -Ddocs.output.dir=docusaurus/docs/v2.37.0
 
       - name: Install dependencies
         run: yarn --cwd docusaurus install --frozen-lockfile
       - name: Build website
         run: NODE_OPTIONS=--max_old_space_size=8000 yarn --cwd docusaurus build
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy docs to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: json-schemas
           publish_dir: docusaurus/build
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+
+      - name: Deploy schemas to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: json-schemas
+          publish_dir: schemas
           user_name: github-actions[bot]
           user_email: 41898282+github-actions[bot]@users.noreply.github.com
