--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <distributionManagement>
         <repository>
             <id>ossrh</id>
