--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>${dhis2.api.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.dhis2.dhis2-core</groupId>
+            <artifactId>dhis-service-tracker</artifactId>
+            <version>${dhis2.api.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.hisp.dhis.parser</groupId>
             <artifactId>dhis-antlr-expression-parser</artifactId>
             <version>1.0.26</version>
