--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Generate schemas
         run: |
-          mvn package exec:java -Ddhis2.api.version=2.37.6 -Dschemas.output.dir=schemas/v2.37.6 -Ddocs.output.dir=docusaurus/docs/v2.37.6
-          mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.36.10 -Dschemas.output.dir=schemas/v2.36.10 -Ddocs.output.dir=docusaurus/docs/v2.36.10
-          mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.35.13 -Dschemas.output.dir=schemas/v2.35.13 -Ddocs.output.dir=docusaurus/docs/v2.35.13
+          mvn package exec:java -Ddhis2.api.version=jitpack~2.38.1-SNAPSHOT -Dschemas.output.dir=schemas/v2.38.1 -Ddocs.output.dir=docusaurus/docs/v2.38.1
+          mvn package exec:java -Ddhis2.api.version=2.37.7 -Dschemas.output.dir=schemas/v2.37.7 -Ddocs.output.dir=docusaurus/docs/v2.37.7
+          mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.36.11 -Dschemas.output.dir=schemas/v2.36.11 -Ddocs.output.dir=docusaurus/docs/v2.36.11
 
       - name: Install dependencies
         run: yarn --cwd docusaurus install --frozen-lockfile
