--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jsonschema-generator.version>4.24.3</jsonschema-generator.version>
         <dhis2.api.version>2.37.6</dhis2.api.version>
         <schemas.output.dir>schemas</schemas.output.dir>
@@ -59,6 +61,17 @@
             <groupId>com.github.dhis2.dhis2-core</groupId>
             <artifactId>dhis-service-tracker</artifactId>
             <version>${dhis2.api.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hisp.dhis</groupId>
+                    <artifactId>json-tree</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.hisp.dhis</groupId>
+            <artifactId>json-tree</artifactId>
+            <version>0.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.hisp.dhis.parser</groupId>
