--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jsonschema-generator.version>4.24.3</jsonschema-generator.version>
-        <dhis2.api.version>2.37.6</dhis2.api.version>
+        <jsonschema-generator.version>4.25.0</jsonschema-generator.version>
+        <dhis2.api.version>jitpack~2.38.1-SNAPSHOT</dhis2.api.version>
         <schemas.output.dir>schemas</schemas.output.dir>
         <docs.output.dir>docs</docs.output.dir>
         <label>${dhis2.api.version}</label>
@@ -102,6 +102,17 @@
             <artifactId>json-path</artifactId>
             <version>2.7.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>4.6.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.12.12</version>
         </dependency>
     </dependencies>
 
