--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
           cache: yarn
           cache-dependency-path: '**/package-lock.json'
 
-      - name: Generate legacy schemas
+      - name: Generate JSON schemas from dhis2-core
         run: |      
           mvn package exec:java -Ddhis2.api.version=2.39.1 -Dschemas.output.dir=schemas/v2.39.1 -Ddocs.output.dir=docusaurus/docs/v2.39.1
           mvn package exec:java -Ddhis2.api.version=jitpack~2.38.1-SNAPSHOT -Dlabel=2.38.1 -Dschemas.output.dir=schemas/v2.38.1
@@ -30,7 +30,7 @@ jobs:
           mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.36.11 -Dschemas.output.dir=schemas/v2.36.11
           mvn package exec:java  -P '!post-v2.37.5' -Ddhis2.api.version=2.35.13 -Dschemas.output.dir=schemas/v2.35.13
 
-      - name: Generate schemas
+      - name: Generate JSON schemas from OpenAPI
         uses: mikefarah/yq@v4.33.3
         with:
           cmd: |
